--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -407,10 +407,11 @@ footer {
 
     .carousel-control-prev,
     .carousel-control-next {
+        z-index: auto;
         .carousel-control-prev-icon,
         .carousel-control-next-icon {
             background-color: rgba(0, 0, 0, 0.5); // Optional: Semi-transparent background for icons
-            display: none;
+      
         }
     }
 }
