--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -136,6 +136,9 @@ a {
 .theme-design {
     border-radius: 30px 0 30px 0; // Curved top-right and bottom-right corners
 }
+.theme-design-high {
+    border-radius: 90px 0 90px 0; // Curved top-right and bottom-right corners
+}
 
 /* Whatsapp Button */
 .whatsapp-popup {
@@ -337,15 +340,11 @@ a {
 
 /* Footer */
 footer {
-    .navbar-brand img {
-        width: 100px;
+    img {
+        width: 80px;
         height: auto;
         max-width: 100%;
         pointer-events: none; /* Prevents clicking to protect logo from being downloaded */
-    }
-
-    .footer-contact .form-control {
-        width: 50%;
     }
 
     .link-animated {
@@ -604,28 +603,20 @@ footer {
 /* Team */
 .team-item {
     transition: .5s;
+    padding: 30px;
 
-    .team-social {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: .5s;
-
-        a.btn {
-            position: relative;
-            margin: 0 3px;
-            margin-top: 100px;
-            opacity: 0;
-        }
+    .team-img {
+        position: relative;
+        width: 150px; /* Adjust size as needed */
+        height: 150px; /* Adjust size as needed */
+        margin: 0 auto;
+        overflow: hidden;
+        border-radius: 50%; /* Makes the image circular */
+        box-shadow: 0 0 30px $theme;
     }
 
     &:hover {
-        box-shadow: 0 0 30px #DDDDDD;
+        box-shadow: 0 0 30px $theme;
     }
 
     &:hover .team-social {
@@ -652,13 +643,14 @@ footer {
 }
 
 /* Testimonial */
-.testimonial-carousel{
+.testimonial-carousel {
     .owl-dots {
         margin-top: 15px;
         display: flex;
         align-items: flex-end;
         justify-content: center;
     }
+
     .owl-dot {
         position: relative;
         display: inline-block;
@@ -668,23 +660,37 @@ footer {
         background: #DDDDDD;
         border-radius: 2px;
         transition: .5s;
+
         &.active {
             width: 30px;
             background: $theme;
         }
     }
+
     .owl-item.center {
         position: relative;
         z-index: 1;
     }
+
     .owl-item .testimonial-item {
         transition: .5s;
     }
+
     .owl-item.center .testimonial-item {
-        background: #FFFFFF !important;
+        background: $theme !important;
         box-shadow: 0 0 30px #DDDDDD;
+
+        // Make the text color white for the active testimonial item
+        color: $white;
+
+        h4,
+        small,
+        p {
+            color: $white; // Ensures all text inside the active testimonial is white
+        }
     }
 }
+
   
 /* Media Queries */
 
