--- a/css/scss/main.css
+++ b/css/scss/main.css
@@ -136,7 +136,7 @@ a {
 }
 
 .theme-design {
-  border-radius: 30px 0 30px 0;
+  border-radius: 20px 0 20px 0;
 }
 
 .theme-design-high {
@@ -363,6 +363,7 @@ footer .link-animated a:hover {
 .carousel .carousel-control-next .carousel-control-prev-icon,
 .carousel .carousel-control-next .carousel-control-next-icon {
   background-color: rgba(0, 0, 0, 0.5);
+  display: none;
 }
 
 /* Banner */
