--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -134,7 +134,7 @@ a {
     height: 48px;
 }
 .theme-design {
-    border-radius: 30px 0 30px 0; // Curved top-right and bottom-right corners
+    border-radius: 20px 0 20px 0; // Curved top-right and bottom-right corners
 }
 .theme-design-high {
     border-radius: 90px 0 90px 0; // Curved top-right and bottom-right corners
@@ -410,6 +410,7 @@ footer {
         .carousel-control-prev-icon,
         .carousel-control-next-icon {
             background-color: rgba(0, 0, 0, 0.5); // Optional: Semi-transparent background for icons
+            display: none;
       
         }
     }
