--- a/css/scss/main.css
+++ b/css/scss/main.css
@@ -464,10 +464,12 @@ footer .link-animated a:hover {
   z-index: 1;
 }
 .features .center-image {
-  max-width: 100%;
-  height: auto;
+  width: 400px; /* Set a fixed width */
+  height: 400px; /* Set the same height as width */
   margin: 0 auto;
-  border-radius: 200px;
+  border-radius: 50%; /* Makes the image a circle */
+  -o-object-fit: cover;
+     object-fit: cover; /* Ensures the image covers the container evenly */
 }
 
 /* Service */
