--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -9,8 +9,8 @@
 }
 
 /* Variables */
-$theme: #4CAF50; // theme color
-$theme-secondary: #388E3C; // Secondary theme color
+$theme: #06A3DA; // theme color
+$theme-secondary: #0b5ed7; // Secondary theme color
 $white: #FFFFFF; // White color
 $dark: #212529; // Dark color
 
