--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -9,7 +9,7 @@
 }
 
 /* Variables */
-$theme: #06A3DA; // theme color
+$theme: #448c74; // theme color
 $theme-secondary: #047CA7; // Secondary theme color
 $white: #FFFFFF; // White color
 $dark: #212529; // Dark color
