--- a/css/scss/main.css
+++ b/css/scss/main.css
@@ -15,7 +15,7 @@ body {
 
 /* Background Colors */
 .bg-theme {
-  background: #06A3DA;
+  background: #448c74;
 }
 
 .bg-secondary-theme {
@@ -24,7 +24,7 @@ body {
 
 /* Text Colors */
 .text-theme {
-  color: #06A3DA;
+  color: #448c74;
 }
 
 .text-secondary-theme {
@@ -105,8 +105,8 @@ a {
 
 .btn-theme {
   color: #FFFFFF;
-  background-color: #06A3DA;
-  border-color: #06A3DA;
+  background-color: #448c74;
+  border-color: #448c74;
 }
 .btn-theme:hover {
   color: #FFFFFF;
@@ -173,7 +173,7 @@ a {
 .spinner {
   width: 40px;
   height: 40px;
-  background: #06A3DA;
+  background: #448c74;
   margin: 100px auto;
   animation: sk-rotateplane 1.2s infinite ease-in-out;
 }
@@ -220,7 +220,7 @@ a {
   height: 3px;
   bottom: 0;
   left: 0; /* Start from the left */
-  background: #06A3DA;
+  background: #448c74;
   border-radius: 2px;
 }
 .section-title.text-center::before {
@@ -235,7 +235,7 @@ a {
   box-shadow: inset 0 0 0 50px transparent;
 }
 .hover-fill:hover {
-  box-shadow: inset 0 0 0 0 #06A3DA;
+  box-shadow: inset 0 0 0 0 #448c74;
 }
 
 /* Zoom In Effect */
@@ -265,21 +265,21 @@ a {
   transition: 0.5s;
 }
 .navbar .navbar-nav .nav-link:hover, .navbar .navbar-nav .nav-link.active {
-  color: #06A3DA;
+  color: #448c74;
 }
 .navbar .navbar-nav .show > .nav-link {
-  color: #06A3DA;
+  color: #448c74;
 }
 .navbar .navbar-toggler {
-  color: #06A3DA !important;
-  border-color: #06A3DA !important;
+  color: #448c74 !important;
+  border-color: #448c74 !important;
 }
 .navbar .dropdown-menu {
   padding: 0;
   border-radius: 0;
 }
 .navbar .dropdown-menu .dropdown-item {
-  background-color: #06A3DA;
+  background-color: #448c74;
   color: #FFFFFF;
   border-bottom: 1px solid #FFFFFF;
   text-align: center;
@@ -292,7 +292,7 @@ a {
 }
 .navbar .dropdown-menu .dropdown-item.active, .navbar .dropdown-menu .dropdown-item:active {
   color: #FFFFFF;
-  background-color: #06A3DA;
+  background-color: #448c74;
 }
 
 .sticky-top.navbar .navbar-nav .nav-link {
@@ -300,7 +300,7 @@ a {
   color: #212529;
 }
 .sticky-top.navbar .navbar-nav .nav-link:hover, .sticky-top.navbar .navbar-nav .nav-link.active {
-  color: #06A3DA;
+  color: #448c74;
 }
 
 /* Footer */
@@ -389,7 +389,7 @@ footer .link-animated a:hover {
 .about-section .background-shape {
   width: 100%;
   height: 100%;
-  background-color: #06A3DA;
+  background-color: #448c74;
   border-radius: 150px 0 150px 0;
   position: absolute;
   top: 20px;
@@ -415,7 +415,7 @@ footer .link-animated a:hover {
 .about-section .about-content h6 {
   font-size: 1rem;
   font-weight: 700;
-  color: #06A3DA;
+  color: #448c74;
 }
 .about-section .about-content h2 {
   font-size: 2.5rem;
@@ -428,7 +428,7 @@ footer .link-animated a:hover {
   color: #212529;
 }
 .about-section .about-content p.text-theme {
-  color: #06A3DA;
+  color: #448c74;
   font-weight: 600;
 }
 
@@ -452,7 +452,7 @@ footer .link-animated a:hover {
   align-items: center;
 }
 .features .feature-item .feature-icon .circle-icon {
-  background-color: #06A3DA;
+  background-color: #448c74;
   color: #FFFFFF;
   border-radius: 50%;
   width: 60px;
@@ -543,10 +543,10 @@ footer .link-animated a:hover {
   margin: 0 auto;
   overflow: hidden;
   border-radius: 50%; /* Makes the image circular */
-  box-shadow: 0 0 30px #06A3DA;
+  box-shadow: 0 0 30px #448c74;
 }
 .team-item:hover {
-  box-shadow: 0 0 30px #06A3DA;
+  box-shadow: 0 0 30px #448c74;
 }
 .team-item:hover .team-social {
   background: rgba(9, 30, 62, 0.7);
@@ -585,7 +585,7 @@ footer .link-animated a:hover {
 }
 .testimonial-carousel .owl-dot.active {
   width: 30px;
-  background: #06A3DA;
+  background: #448c74;
 }
 .testimonial-carousel .owl-item.center {
   position: relative;
@@ -595,7 +595,7 @@ footer .link-animated a:hover {
   transition: 0.5s;
 }
 .testimonial-carousel .owl-item.center .testimonial-item {
-  background: #06A3DA !important;
+  background: #448c74 !important;
   box-shadow: 0 0 30px #DDDDDD;
   color: #FFFFFF;
 }
