--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -10,7 +10,7 @@
 
 /* Variables */
 $theme: #448c74; // theme color
-$theme-secondary: #047CA7; // Secondary theme color
+$theme-secondary: #336954; // Secondary theme color
 $white: #FFFFFF; // White color
 $dark: #212529; // Dark color
 
