--- a/css/scss/main.css
+++ b/css/scss/main.css
@@ -432,6 +432,7 @@ footer .link-animated a:hover {
   font-weight: 600;
 }
 
+/* Features */
 .features .feature-item {
   position: relative;
   display: flex;
@@ -470,52 +471,6 @@ footer .link-animated a:hover {
   border-radius: 50%; /* Makes the image a circle */
   -o-object-fit: cover;
      object-fit: cover; /* Ensures the image covers the container evenly */
-}
-
-/* Service */
-.service .card {
-  border: none;
-  position: relative;
-  overflow: hidden;
-}
-.service .card .card-img {
-  transition: transform 0.4s ease-in-out;
-}
-.service .card:hover .card-img {
-  transform: scale(1.1);
-}
-.service .card .card-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: opacity 0.4s ease-in-out;
-}
-.service .card .card-hover-overlay {
-  position: absolute;
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.8);
-  transition: left 0.4s ease-in-out, opacity 0.4s ease-in-out;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  opacity: 0;
-}
-.service .card:hover .card-overlay {
-  opacity: 0;
-}
-.service .card:hover .card-hover-overlay {
-  left: 0;
-  opacity: 1;
 }
 
 /* Plan */
@@ -571,7 +526,34 @@ footer .link-animated a:hover {
   transition-delay: 0.15s;
 }
 
-/* Testimonial */
+.testimonial-carousel {
+  position: relative;
+}
+.testimonial-carousel .owl-stage-outer {
+  overflow: hidden;
+}
+.testimonial-carousel .owl-item {
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+.testimonial-carousel .owl-item.center {
+  opacity: 1;
+  z-index: 2;
+}
+.testimonial-carousel .testimonial-item {
+  max-width: 550px;
+  background: #FFFFFF !important;
+  color: #212529;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: absolute; /* Position the item absolutely within its parent */
+  left: 100%; /* Adjust the right positioning */
+}
+.testimonial-carousel .testimonial-content {
+  font-size: 1rem;
+  line-height: 1.5;
+}
 .testimonial-carousel .owl-dots {
   margin-top: 15px;
   display: flex;
@@ -591,23 +573,6 @@ footer .link-animated a:hover {
 .testimonial-carousel .owl-dot.active {
   width: 30px;
   background: #3391e6;
-}
-.testimonial-carousel .owl-item.center {
-  position: relative;
-  z-index: 1;
-}
-.testimonial-carousel .owl-item .testimonial-item {
-  transition: 0.5s;
-}
-.testimonial-carousel .owl-item.center .testimonial-item {
-  background: #3391e6 !important;
-  box-shadow: 0 0 30px #DDDDDD;
-  color: #FFFFFF;
-}
-.testimonial-carousel .owl-item.center .testimonial-item h4,
-.testimonial-carousel .owl-item.center .testimonial-item small,
-.testimonial-carousel .owl-item.center .testimonial-item p {
-  color: #FFFFFF;
 }
 
 /* Retreats Page */
@@ -737,12 +702,13 @@ footer .link-animated a:hover {
   }
 }
 @media (min-width: 992px) {
-  /* Navbar */
+  /* Sticky Top Navbar 
   .sticky-top.navbar {
-    position: fixed;
-    width: 100%;
-    background: #FFFFFF;
+      position: fixed;
+      width: 100%;
+      background: #FFFFFF;
   }
+  */
   /* Navbar Transparent
   .navbar {
       position: absolute;
