--- a/css/scss/main.css
+++ b/css/scss/main.css
@@ -672,6 +672,9 @@ footer .link-animated a:hover {
     margin-left: 0px !important;
     margin-right: 0px !important;
   }
+  .features .center-image {
+    height: 330px; /* Set the same height as width */
+  }
 }
 /* Tablets/Ipads Only */
 @media (max-width: 768px) {
@@ -721,12 +724,6 @@ footer .link-animated a:hover {
   /* Gallery */
   .gallery .box {
     margin: -15px;
-  }
-  /* Facts Counter */
-  .facts {
-    position: relative;
-    margin-top: -75px;
-    z-index: 1;
   }
 }
 @media (min-width: 1200px) {
