--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -786,6 +786,7 @@ footer {
             max-width: 350px; // Limit the width of each testimonial
             position: absolute; /* Position the item absolutely within its parent */
             left: 0%; /* Adjust the right positioning */
+            margin: 0 auto;
         }
     }
 }
