--- a/css/scss/main.css
+++ b/css/scss/main.css
@@ -679,6 +679,7 @@ footer .link-animated a:hover {
     max-width: 350px;
     position: absolute; /* Position the item absolutely within its parent */
     left: 0%; /* Adjust the right positioning */
+    margin: 0 auto;
   }
 }
 /* Tablets/Ipads Only */
