--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -426,7 +426,7 @@ footer {
 .about-section {
     display: flex;
     align-items: center;
-    padding: 60px 0;
+    padding: 50px 0;
 
     .about-image-wrapper {
         position: relative;
@@ -481,7 +481,6 @@ footer {
         }
     }
 }
-
 
 /* Features */
 .features {
@@ -593,6 +592,7 @@ footer {
     }
 }
 
+/* Testimonial */
 .testimonial-carousel {
     position: relative;
 
@@ -645,7 +645,6 @@ footer {
     }
 }
 
-
 /* Retreats Page */
 .custom-side-nav {
     padding: 30px;
@@ -692,7 +691,6 @@ footer {
         }
     }
 }
-
 
 .intro {
     padding: 20px;
