--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -646,6 +646,74 @@ footer {
     }
 }
 
+/* About Page */
+
+.img-grid {
+    .img-fluid {
+      border-radius: 20px; // Adjust radius as needed for rounded corners
+      transition: transform 0.3s ease;
+      &:hover {
+        transform: scale(1.05); // Slight zoom effect on hover
+      }
+    }
+  }
+  
+
+/* Our Mission Parallax Section */
+.parallax-mission-section {
+    position: relative;
+    overflow: hidden;
+    height: 500px; // Adjust height as needed
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+  
+    .parallax-bg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed; // Parallax effect
+      z-index: 1; // Ensure it's below the content
+    }
+  
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7); // Dark overlay
+      z-index: 2; // Above background, below content
+    }
+  
+    .mission-content {
+      position: relative;
+      z-index: 3; // Above the overlay
+      text-align: center;
+  
+      h2 {
+        font-size: 2.5rem;
+        font-weight: bold;
+        color: #fff;
+        margin-bottom: 1.5rem;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); // Highlighted effect
+      }
+  
+      p {
+        font-size: 1.22rem;
+        margin-bottom: 1.5rem;
+        color: #fff;
+        text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5); // Highlighted effect
+      }
+    }
+  }
+  
+  
 /* Retreats Page */
 .custom-side-nav {
     padding: 30px;
